@@ -8,11 +8,11 @@
 /*
 #include <CGAL/MP_Float.h>
 #include <CGAL/Quotient.h>
-typedef  CGAL::Quotient<CGAL::MP_Float> ET; */
+typedef  CGAL::Lazy_exact_nt< CGAL::Quotient<CGAL::MP_Float> > ET; */
 
 /* Try using this data type in case it fails */
 #include <CGAL/Gmpq.h>
-typedef CGAL::Lazy_exact_nt<CGAL::Gmpq> ET;
+typedef CGAL::Lazy_exact_nt<CGAL::Gmpq> ET; 
 
 
 class MyPointC2 {
